--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "koa-router": "^8.0.8",
     "lodash": "^4.17.15",
     "mongoose": "^5.9.7",
+    "swagger2": "^2.0.0",
+    "swagger2-koa": "^2.0.0",
     "yenv": "^2.1.1"
   },
   "devDependencies": {
